frontend/test/should_fail/delretypesame_001_e.grg
rule r{	-e:Edge->;		alternative {		case {						modify {				delete(e);			}		}	}		modify {		-f:Edge<e>->;	}}